# tideml

./: Cargo.toml  Dockerfile  README.md
scmodel/: Cargo.toml
scmodel/model/: sc_reg.model
scmodel/src/: fileops.rs  lib.rs  main.rs  sc_model.rs  schema.rs
tideapi/: Cargo.toml
tideapi/src/: input.rs  main.rs
