[package]
name = "scmodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.28.0"
polars-core = { version = "0.28.0", features = ["ndarray"]}
smartcore = { version = "0.3.1", features = ["serde"] }
bincode = "1.3.3"
serde = {version = "1.0.160", features = ["derive"]}

